--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = ""
 authors = ["xentropy <claponsie@gmail.com>"]
 readme = "README.md"
 packages = [{ include = "irtac" }]
-package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -13,6 +12,7 @@ pymodbustcp = "^0.2.2"
 pymodbus = "^3.7.0"
 aiohttp = "^3.10.1"
 colorlog = "^6.8.2"
+labjack-ljm = "^1.23.0"
 
 [tool.poetry.scripts]
 modbus = "irtac.modbus_server:run"
