--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pymodbus = "^3.7.0"
 aiohttp = "^3.10.1"
 colorlog = "^6.8.2"
 labjack-ljm = "^1.23.0"
+numpy = "^2.1.0"
+matplotlib = "^3.9.2"
+scipy = "^1.14.1"
 
 [tool.poetry.scripts]
 modbus = "irtac.modbus_server:run"
